[package]
name = "hello_relm4"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
relm4-components = "0.10.0"
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
gio = "0.21.2"
glib = "0.21.3"
gtk = { version = "0.10.1", package = "gtk4", features = ["gnome_48"] }
tracing = "0.1.41"
